# c_dump

./: .gitignore  CMakeLists.txt  README.md  main.c
basic_exercises/: exercise_1.c  exercise_1.h  exercise_2.c  exercise_2.h  exercise_3.c  exercise_3.h  exercise_4.c  exercise_4.h  exercise_5.c  exercise_5.h  exercise_6.c  exercise_6.h  exercise_7.c  exercise_7.h  exercise_8.c  exercise_8.h  exercise_aio.c  exercise_aio.h
exercise_helpers/: exercise_runner.c  exercise_runner.h
k_r_book/: notes.md
k_r_book/chapter_1/: 1_1.c  1_10.c  1_12.c  1_13.c  1_14.c  1_15.c  1_17.c  1_18.c  1_19.c  1_2.c  1_20.c  1_21.c  1_22.c  1_23.c  1_3.c  1_4.c  1_5.c  1_6.c  1_7.c  1_8.c  1_9.c  Makefile  README.md  test_1_23.c
k_r_book/chapter_2/: 1  1.c  10.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
k_r_book/chapter_3/: 1.c  2.c  3.c  4.c  5.c  6.c
k_r_book/chapter_4/: 1.c  10.c  11.c  12.c  13.c  14.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
k_r_book/chapter_5/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
k_r_book/chapter_6/: 1.c  2.c
variable_type_exercises/: variable_type_aio.c  variable_type_aio.h
